December 2, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfinput/pad.c: Removed DualShock2-specific stuff in PADpoll().
 * macosx/plugins/HIDInput/src/PlugPAD.c: Likewise.

December 1, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfcdrom/cdr-linux.c: Fixed crash bug when resuming emulation in
   Threaded mode.
 * gui/MemcardDlg.c: Don't keep previous selection after creating a new
   memcard or changing a memcard.
 * gui/Gtk2Gui.c: Minor cleanup.

November 30, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * macosx/plugins/DFSound/PeopsSPU.xcodeproj/project.pbxproj: Changed build
   directory into ../../build.
 * macosx/plugins/HIDInput/HIDInput.xcodeproj/project.pbxproj: Likewise.
 * macosx/plugins/CDDeviceInterface/CDDeviceInterfacePlugin.xcodeproj/
   project.pbxproj: Likewise.
 * macosx/plugins/DFXVideo/PeopsSoftGPU.xcodeproj/project.pbxproj: Likewise.
 * macosx/Pcsx.xcodeproj/project.pbxproj: Include building and copying plugins
   to the bundle (thanks avlex).

November 29, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * data/pcsx.glade2: Got rid of GtkFileChooserButton, which is buggy. Added
   a Toolbar which contains several most-used functions.
 * gui/MemcardDlg.c: Got rid of GtkFileChooserButton.
 * gui/Gtk2Gui.c: Moved configuration-related stuff into ConfDlg.c. Added
   Toolbar support.
 * gui/ConfDlg.c: Added.
 * gui/ConfDlg.h: Added.
 * gui/Linux.h: Removed unnecessary prototypes. Moved some stuff into
   ConfDlg.h.
 * libpcsxcore/psxcommon.h: Use MAXPATHLEN for string lengths.
 * po/pt_BR.po, po/zh_CN.po, po/zh_TW.po, po/pcsx.pot: Updated.
 * po/update-pot.sh: Also run msgmerge automatically.
 * doc/pcsx.1: Don't say "PCSX-df".
 * macosx/main.m: Minor cleanup.
 * macosx/PluginController.m: Likewise.
 * macosx/PcsxController.m: Made the memory card files configurable.
 * macosx/ConfigurationController.m: Likewise.
 * macosx/ConfigurationController.h: Likewise.
 * macosx/English.lproj/Configuration.nib/info.nib: Likewise.