@@ -1,3 +1,10 @@
+December 3, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * plugins/dfinput/pad.c: Changed the value of center position to 127 instead
+   of 128, which fixes the FF8 problem. Still need further confirmation about
+   this, as all of the protocol docs I've read as well as psemu_plugin_defs.h
+   say 128 is the center position.
+
 December 2, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * plugins/dfinput/pad.c: Removed DualShock2-specific stuff in PADpoll().
